[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "0.6.2", features = ["ws", "openssl"] }
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
futures-channel = "0.3.21"
reqwest = "0.11.10"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"